// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/annotations.proto";
import "google/api/resource.proto";
import "wfa/measurement/reporting/v2alpha/metric_calculation_spec.proto";

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "MetricCalculationSpecsServiceProto";

// Service for interacting with `MetricCalculationSpec` resources.
service MetricCalculationSpecs {
  // Creates a `MetricCalculationSpec`.
  rpc CreateMetricCalculationSpec(CreateMetricCalculationSpecRequest)
      returns (MetricCalculationSpec) {
    option (google.api.http) = {
      post: "/v2alpha/{parent=measurementConsumers/*}/metricCalculationSpecs"
      body: "metricCalculationSpec"
    };
    option (google.api.method_signature) = "parent,metricCalculationSpec";
  }

  // Returns the `MetricCalculationSpec` with the specified resource key.
  rpc GetMetricCalculationSpec(GetMetricCalculationSpecRequest)
      returns (MetricCalculationSpec) {
    option (google.api.http) = {
      get: "/v2alpha/{name=measurementConsumers/*/metricCalculationSpecs/*}"
    };
    option (google.api.method_signature) = "name";
  }

  // Lists `MetricCalculationSpec`s.
  rpc ListMetricCalculationSpecs(ListMetricCalculationSpecsRequest)
      returns (ListMetricCalculationSpecsResponse) {
    option (google.api.http) = {
      get: "/v2alpha/{parent=measurementConsumers/*}/metricCalculationSpecs"
    };
    option (google.api.method_signature) = "parent";
  }
}

// Request message for `CreateMetricCalculationSpec` method.
message CreateMetricCalculationSpecRequest {
  // The parent resource where this `MetricCalculationSpec` will be created
  // under.
  // Format: measurementConsumers/{measurement_consumer}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "reporting.halo-cmm.org/MetricCalculationSpec"
    }
  ];

  // The ID to use for the `MetricCalculationSpec`, which will become the final
  // component of the `MetricCalculationSpec`s resource name.
  //
  // This must conform to RFC 1034, with the additional restriction that all
  // letters must be lower-case.
  string metric_calculation_spec_id = 2
      [(google.api.field_behavior) = REQUIRED];

  // The `MetricCalculationSpec` to create.
  MetricCalculationSpec metric_calculation_spec = 3
      [(google.api.field_behavior) = REQUIRED];
}

message GetMetricCalculationSpecRequest {
  // The name of the `MetricCalculationSpec` to retrieve.
  // Format:
  // measurementConsumers/{measurement_consumer}/metricCalculationSpecs/{metric_calculation_spec}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "reporting.halo-cmm.org/MetricCalculationSpec"
    }
  ];
}

message ListMetricCalculationSpecsRequest {
  // Resource name of the parent `MeasurementConsumer`.
  // Format: measurementConsumers/{measurement_consumer}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "reporting.halo-cmm.org/MetricCalculationSpec"
    }
  ];

  // The maximum number of `MetricCalculationSpec`s to return. The service
  // may return fewer than this value. If unspecified, at most 50
  // `MetricCalculationSpec`s will be returned. The maximum value is 1000;
  // values above 1000 will be coerced to 1000.
  int32 page_size = 2;

  // A token from a previous call, specified to retrieve the next page. See
  // https://aip.dev/158.
  string page_token = 3;

  // Result filter. Raw CEL expression that is applied.
  string filter = 4;
}

message ListMetricCalculationSpecsResponse {
  // The `MetricCalculationSpec` resources. Ordered by `name`,
  // asc.
  repeated MetricCalculationSpec metric_calculation_specs = 1;

  // A token that can be specified in a subsequent call to retrieve the next
  // page. See https://aip.dev/158.
  string next_page_token = 2;
}
